Include Frameworks in Capacity Planning Triage

--- a/infrastructure/team/scalability/projections.html.md.erb
+++ b/infrastructure/team/scalability/projections.html.md.erb
@@ -42,25 +42,33 @@ the label of `Saturation Metrics`.
 
 | Week starting | Person |
 | --- | --- |
-| 2023-02-13 | Stephanie |
-| 2023-02-20 | Bob |
-| 2023-03-06 | Bob |
-| 2023-03-13 | Hercules |
 | 2023-03-20 | Hercules |
 | 2023-03-27 | Bob |
-| 2023-04-03 | Hercules |
-| 2023-04-10 | Matt |
-| 2023-04-17 | Matt |
-| 2023-04-24 | Matt |
-| 2023-05-01 | Rachel |
-| 2023-05-08 | Rachel |
-| 2023-05-15 | Rachel |
+| 2023-04-03 | Jacob |
+| 2023-04-10 | Jacob |
+| 2023-04-17 | Sylvester |
+| 2023-04-24 | Sylvester |
+| 2023-05-01 | Marco |
+| 2023-05-08 | Marco |
+| 2023-05-15 | Matt |
+| 2023-05-22 | Matt |
+| 2023-05-29 | Chance |
+| 2023-06-05 | Chance |
+| 2023-06-12 | Stephanie |
+| 2023-06-19 | Stephanie |
+| 2023-06-26 | Alejandro |
+| 2023-07-03 | Alejandro |
+| 2023-07-10 | Igor |
+| 2023-07-17 | Igor |
+| 2023-07-24 | Hercules |
+| 2023-07-31 | Hercules |
 
-The responsibility for reviewing Tamland reports rotates between team members and includes the Engineering Manager. 
 
-The rotation lasts for a minimum of three weeks. There is flexibility in the schedule to allow for OOO and on-call responsibilities. 
+The responsibility for reviewing Tamland reports rotates between all members of the Scalability Group. 
 
-The purpose of having a longer rotation cycle is to provide exposure to the wide variety of capacity warnings that occur and to enable each person to gain context on every component that we monitor. 
+The rotation lasts for a minimum of two weeks. There is flexibility in the schedule to allow for OOO and on-call responsibilities. 
+
+The length of the rotation cycle is to try provide exposure to the wide variety of capacity warnings that occur and to enable each person to gain context on the components that we monitor. 
 
 #### Triage Duties
 
