--- a/people-group/relocation/index.html.md.erb
+++ b/people-group/relocation/index.html.md.erb
@@ -92,7 +92,7 @@ Adjusting [pay according to the local market in all cases](/handbook/total-rewar
    > - Work Eligibility:
 
 1. Upload the manager email (above) to your Workday profile. See [How to: Upload Documents](https://docs.google.com/document/d/19B0lsMu7dMhof1ghPuBxHP23DuDqi2qpWF8pCWyEUN4/edit)
-1. Complete the [relocation form](https://docs.google.com/forms/d/e/1FAIpQLSeRyR2FG43izzVW2FrImUCNVWiMtIlA0JAFIJaO2V-ArzQs0Q/viewform).
+1. Complete the relocation form. The form is currently being updated and will be available soon. Please reach out to People Connect with any questions. 
 
 Note: Assuming your relocation is approved, any applicable changes in compensation will not be effective until your move date (or the date you start working in the new location), which will be listed as the effective date on your new contract. **We will not be able to process retroactive dated relocations. Please only use future dates when applying for your relocation.**
 
