Update 'Strategic Account Leader' to 'Strategic Account Executive'

--- a/job-families/sales/account-executive/index.html.md.erb
+++ b/job-families/sales/account-executive/index.html.md.erb
@@ -63,7 +63,7 @@ The Mid Market Account Executive is a [grade 7](https://about.gitlab.com/handboo
 
 ## Career Ladder
 
-The next step in the Account Executive - Mid Market job family is to move to the [Strategic Account Leader](/job-families/sales/strategic-account-leader) job family or the [Sales Management](/job-families/sales/area-sales-manager/) Job Family
+The next step in the Account Executive - Mid Market job family is to move to the [Strategic Account Executive](/job-families/sales/enterprise-account-executive) job family or the [Sales Management](/job-families/sales/area-sales-manager/) Job Family
 
 ## Hiring Process
 
