--- a/job-families/sales/program-manager-field-enablement/index.html.md.erb
+++ b/job-families/sales/program-manager-field-enablement/index.html.md.erb
@@ -110,7 +110,7 @@ The Staff Program Manager, Field Enablement is a [grade 8](/handbook/total-rewar
 ## Specialities 
 
 #### Sales Enablement Responsibilities 
-Focus on development and execution of impactful training and enablement solutions for GitLab sales professionals (Enterprise and Public Sector Strategic Account Leaders, and Mid-Market & SMB Account Executives) across the sales professional lifecycle.
+Focus on development and execution of impactful training and enablement solutions for GitLab sales professionals (Enterprise and Public Sector Strategic Account Executives, and Mid-Market & SMB Account Executives) across the sales professional lifecycle.
 
 #### Customer Success Enablement Responsibilities
 Focus on development and execution of impactful training and enablement solutions plus technical learning programs for GitLab customer success professionals (Customer Success Managers, Customers Success Engineers, Solutions Architects, and Renewals Specialists) across the technical sales professional lifecycle.
