--- a/job-families/sales/public-sector-inside-account-representative/index.html.md.erb
+++ b/job-families/sales/public-sector-inside-account-representative/index.html.md.erb
@@ -63,7 +63,7 @@ The Senior Inside Sales Representative is a [grade 7](/handbook/total-rewards/co
 
 ## Career Ladder
 
-The next steps for the Inside Sales Representative Job Family would be to move to the [Strategic Account Leader](/job-families/sales/strategic-account-leader/) Job Family.
+The next steps for the Inside Sales Representative Job Family would be to move to the [Strategic Account Executive](/job-families/sales/enterprise-account-executive/) Job Family.
 
 ## Hiring Process
 
