Update 'Strategic Account Leader' to 'Strategic Account Executive'

--- a/product/product-processes/customer-issues-prioritization-framework/index.html.md.erb
+++ b/product/product-processes/customer-issues-prioritization-framework/index.html.md.erb
@@ -238,7 +238,7 @@ Filters:
 - Product Stage 
 - Salesforce Account Name 
 - Customer Success Manager 
-- Strategic Account Leader / Account Owner 
+- Strategic Account Executive / Account Owner 
 - Sales Segment 
 - Aggregation 
 - Date Range 
@@ -260,7 +260,7 @@ Filters:
 
 - Customer Success Manager
 - Salesforce Account Name 
-- Strategic Account Leader / Account Owner 
+- Strategic Account Executive / Account Owner 
 - Sales Segment 
 - Notable Type 
 - Notable ID 
