Update 'Strategic Account Leader' to 'Strategic Account Executive'

--- a/sales/index.html.md.erb
+++ b/sales/index.html.md.erb
@@ -92,7 +92,7 @@ The Sales team is led by the [Chief Revenue Officer (CRO)](/job-families/sales/c
 The Sales team is organized into Large, Mid-Market, and SMB segments. (Descriptions of Sales segments can be found in the [Field Operations Handbook - Segmentation section](/handbook/sales/field-operations/gtm-resources/#segmentation).)
 
 The people working with each segment and their quota are:
-- Large: [Strategic Account Leader](/job-families/sales/strategic-account-leader/) (SAL)
+- Large: [Strategic Account Executive](/job-families/sales/enterprise-account-executive/) (SAE)
 - Mid-Market: [Mid-Market Account Executive](/job-families/sales/account-executive/) (MM AE)
 - SMB: [SMB Account Executive](/job-families/sales/smb-customer-advocate/) (SMB AE)
 
